--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,19 @@
 [package]
-name = "test-api-policy"
+name = "test-simple-api-policy-fgw"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib"]
-name="test_api_policy"
+name="test_simple_api_policy_fgw"
 path="src/lib.rs"
 
 [dependencies]
 proxy-wasm = { git = "https://github.com/proxy-wasm/proxy-wasm-rust-sdk.git", tag = "v0.2.0" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+lazy_static = "1.4.0"
+chrono = { version = "0.4", features = ["serde"] }
 
 [profile.release]
 opt-level = "z"
