--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,13 @@ path="src/lib.rs"
 proxy-wasm = { git = "https://github.com/proxy-wasm/proxy-wasm-rust-sdk.git", tag = "v0.2.0" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+log = "0.4"
+regex = "1.9.1"
+base64 = "~0.2.0"
+base64-url = "2.0.0"
 lazy_static = "1.4.0"
 chrono = { version = "0.4", features = ["serde"] }
+wasm-bindgen-test = "0.3.49"
 
 [profile.release]
 opt-level = "z"
